--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -7,18 +7,58 @@
   gap: 2rem;
 }
 
-#pricing h2 {
+#pricing .head-wrapper {
+  width: 100%;
+  background: var(--blue-trans);
+  border-radius: 1rem 1rem 0 0 ;
+  box-shadow: 0 0 .5rem var(--blue-dark);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: .75rem;
+}
+
+#pricing .head-wrapper h2 {
   font-family: var(--sourGummy);
   font-size: 2.9rem;
   color: var(--white);
   text-shadow: .1rem .1rem .3rem var(--blue-dark);
-  text-align: center;
-  width: 100%;
-  background: var(--blue-trans);
-  border-radius: 1rem 1rem 0 0 ;
-  padding: .75rem;
-  box-shadow: 0 0 .5rem var(--blue-dark);
+  align-self: start;
 }
+
+#pricing .badge-wrapper {
+  flex: 1 1 45%;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: .5rem;
+}
+
+#pricing .badge-wrapper img {
+  height: 6rem;
+  width: auto;
+}
+
+#pricing .badge-wrapper .text-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+#pricing .badge-wrapper .text-wrapper h3 {
+  font-weight: bold;
+  font-family: var(--subheading);
+  text-align: right;
+}
+
+#pricing .badge-wrapper .text-wrapper p {
+  font-size: 1rem;
+  text-align: right;
+  text-wrap: balance;
+}
+
 
 #pricing .package-container {
   position: relative;
