updated about section name

--- a/styles/about.css
+++ b/styles/about.css
@@ -1,4 +1,4 @@
-#about {
+#about-us {
   background: url(../Images/newspaper.png);
   background-position: 50% 50%;
   background-size: cover;
@@ -11,7 +11,7 @@
   scroll-margin-top: calc(var(--headHeight) + 5vh);
 }
 
-#about .head-wrap {
+#about-us .head-wrap {
   width: 100%;
   margin: 0 auto;
   display: flex;
@@ -20,13 +20,13 @@
   gap: 1rem;
 }
 
-#about .head-wrap figure {
+#about-us .head-wrap figure {
   margin: 0 auto;
   width: 80%;
   max-width: 400px;
 }
 
-#about .head-wrap img {
+#about-us .head-wrap img {
   width: 100%;
   height: auto;
   object-fit: contain;
@@ -34,14 +34,14 @@
   box-shadow: 0 0 .2rem var(--yellow-dark);
 }
 
-#about .head-wrap figcaption {
+#about-us .head-wrap figcaption {
   text-align: right;
   font-size: .75rem;
   font-style: italic;
   color: var(--black);
 }
 
-#about .head-wrap h2 {
+#about-us .head-wrap h2 {
   text-align: left;
   color: var(--black);
   font-size: 2.2rem;
@@ -49,19 +49,19 @@
   color: var(--black);
 }
 
-#about .my-story #hiking-story, 
-#about .my-story #learning-webstuff {
+#about-us .my-story #hiking-story, 
+#about-us .my-story #learning-webstuff {
   margin-top: 1rem;
   column-width: clamp(280px, 30cqw, 450px);
   font-size: clamp(11px, 1rem, 22px);
 }
 
-#about .my-story p:not(:first-of-type) {
+#about-us .my-story p:not(:first-of-type) {
   margin-top: 1rem;
   text-align: justify;
 }
 
-#about .my-story #hiking-story .first-paragraph::first-letter {
+#about-us .my-story #hiking-story .first-paragraph::first-letter {
   font-size: clamp(33px, 2.5rem, 55px);
   color: var(--pink);
   font-weight: bold;
@@ -70,7 +70,7 @@
   padding-right: .25rem;
 }
 
-#about .my-story aside {
+#about-us .my-story aside {
   width: clamp(280px, 50%, 300px);
   background: var(--pink);
   color: var(--white);
@@ -84,29 +84,29 @@
   break-inside: avoid;
 }
 
-#about .my-story hr {
+#about-us .my-story hr {
   margin: 1rem auto 0;
   border-color: var(--pink);
   width: 90%;
 }
 
-#about .keep-together {
+#about-us .keep-together {
   break-inside: avoid;
 }
 
-#about .my-story .block-quote {
+#about-us .my-story .block-quote {
   margin: 1rem 2rem;
   font-style: italic;
   color: var(--pink-dark);
   text-align: justify;
 }
 
-#about .my-story .callout-text {
+#about-us .my-story .callout-text {
   font-size: 1.1rem;
   font-weight: bold;
 }
 
-#about .my-story .inline-quote {
+#about-us .my-story .inline-quote {
   display: block;
   font-style: italic;
   color: var(--pink-dark);
@@ -115,11 +115,11 @@
   break-inside: avoid;
 }
 
-#about .my-story #learning-webstuff .larger-text {
+#about-us .my-story #learning-webstuff .larger-text {
   font-size: 1rem;
 }
 
-#about .my-story #learning-webstuff .attention-grabber {
+#about-us .my-story #learning-webstuff .attention-grabber {
   background: var(--pink);
   border: 1px solid var(--pink-dark);
   box-shadow: 0 0 .2rem var(--pink-dark);
@@ -128,7 +128,7 @@
   color: var(--white);
 }
 
-#about .my-story #learning-webstuff .guarantee {
+#about-us .my-story #learning-webstuff .guarantee {
   display: block;
   margin: .35rem;
   font-weight: bold;
